Update command data for Hyundai/Tucson Hybrid

--- a/tests/test_cases/2024/commands/7E0.0131.yaml
+++ b/tests/test_cases/2024/commands/7E0.0131.yaml
@@ -4,5 +4,8 @@ test_cases:
     CLR_DIST: 14053
   response: 7E804413136E5
 - expected_values:
-    CLR_DIST: 14070
-  response: 7E804413136F6
+    CLR_DIST: 14079
+  response: 7E804413136FF
+- expected_values:
+    CLR_DIST: 14080
+  response: '7E80441313700'
