--- a/tests/test_cases/2024/commands/7E0.0144.yaml
+++ b/tests/test_cases/2024/commands/7E0.0144.yaml
@@ -4,6 +4,9 @@ test_cases:
     EQ_RAT: 0.9724
   response: 7E80441447C77
 - expected_values:
+    EQ_RAT: 0.9785
+  response: 7E80441447D3F
+- expected_values:
     EQ_RAT: 0.97996
   response: 7E80441447D6F
 - expected_values:
