--- a/tests/test_cases/2024/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -37,6 +37,18 @@ test_cases:
     7A8243688A988A988A9
     7A82588A9AAAAAAAAAA
 - expected_values:
+    TUCSONHYB_TP_FL: 33.6
+    TUCSONHYB_TP_FR: 33.8
+    TUCSONHYB_TP_RL: 33.6
+    TUCSONHYB_TP_RR: 33.4
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180A83E010000A9
+    7A8223E010000A83C01
+    7A8230000A73E010000
+    7A8243D88A988A988A9
+    7A82588A9AAAAAAAAAA
+- expected_values:
     TUCSONHYB_TP_FL: 34.4
     TUCSONHYB_TP_FR: 34.4
     TUCSONHYB_TP_RL: 34
@@ -49,16 +61,52 @@ test_cases:
     7A8243688A988A988A9
     7A82588A9AAAAAAAAAA
 - expected_values:
-    TUCSONHYB_TP_FL: 34.8
+    TUCSONHYB_TP_FL: 34.6
     TUCSONHYB_TP_FR: 35
-    TUCSONHYB_TP_RL: 34.4
-    TUCSONHYB_TP_RR: 34
+    TUCSONHYB_TP_RL: 34
+    TUCSONHYB_TP_RR: 33.8
   response: |-
     7A8102462C00BFFFFFF
-    7A82180AE3F010000AF
-    7A82240010000AC3A01
-    7A8230000AA3C010000
-    7A8243688A988A988A9
+    7A82180AD3F010000AF
+    7A82241010000AA3B01
+    7A8230000A93D010000
+    7A8243D88A988A988A9
+    7A82588A9AAAAAAAAAA
+- expected_values:
+    TUCSONHYB_TP_FL: 34.6
+    TUCSONHYB_TP_FR: 35.2
+    TUCSONHYB_TP_RL: 34.4
+    TUCSONHYB_TP_RR: 33.8
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180AD41010000B0
+    7A82242010000AC3C01
+    7A8230000A93E010000
+    7A8243D88A988A988A9
+    7A82588A9AAAAAAAAAA
+- expected_values:
+    TUCSONHYB_TP_FL: 34.6
+    TUCSONHYB_TP_FR: 35.2
+    TUCSONHYB_TP_RL: 34.4
+    TUCSONHYB_TP_RR: 33.8
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180AD41010000B0
+    7A82243010000AC3C01
+    7A8230000A93E010000
+    7A8243D88A988A988A9
+    7A82588A9AAAAAAAAAA
+- expected_values:
+    TUCSONHYB_TP_FL: 34.6
+    TUCSONHYB_TP_FR: 35.2
+    TUCSONHYB_TP_RL: 34.4
+    TUCSONHYB_TP_RR: 33.8
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180AD42010000B0
+    7A82243010000AC3E01
+    7A8230000A93E010000
+    7A8243D88A988A988A9
     7A82588A9AAAAAAAAAA
 - expected_values:
     TUCSONHYB_TP_FL: 35
@@ -83,4 +131,16 @@ test_cases:
     7A82240010000AC3B01
     7A8230000AA3C010000
     7A8243688A988A988A9
+    7A82588A9AAAAAAAAAA
+- expected_values:
+    TUCSONHYB_TP_FL: 35.4
+    TUCSONHYB_TP_FR: 35.6
+    TUCSONHYB_TP_RL: 34.4
+    TUCSONHYB_TP_RR: 34.2
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180B142010000B2
+    7A82243010000AC3E01
+    7A8230000AB3E010000
+    7A8243D88A988A988A9
     7A82588A9AAAAAAAAAA
