--- a/tests/test_cases/2024/commands/7E0.0104.yaml
+++ b/tests/test_cases/2024/commands/7E0.0104.yaml
@@ -4,5 +4,5 @@ test_cases:
     LOAD_PCT: 0
   response: '7E803410400'
 - expected_values:
-    LOAD_PCT: 59.60784
-  response: '7E803410498'
+    LOAD_PCT: 62.35294
+  response: 7E80341049F
