--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -54,14 +54,24 @@ supported_commands_by_ecu:
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
   - 01A6:ODO
+  - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 7E0.0103:FUELSYS1,FUELSYS2
   - 7E0.0104:LOAD_PCT
   - 7E0.0106:SHRTFT1
   - 7E0.010D:VSS
   - 7E0.0110:MAF
+  - 7E0.011C:OBDSUP
+  - 7E0.011F:RUNTM
+  - 7E0.0121:MIL_DIST
   - 7E0.012F:FLI
+  - 7E0.0130:WARM_UPS
   - 7E0.0131:CLR_DIST
   - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
+  - 7E0.0142:VPWR
   - 7E0.0144:EQ_RAT
+  - 7E0.0146:AAT
+  - 7E0.019D:FUEL_RATE_ALT,VFUEL_RATE
+  - 7E0.019E:EXH_RATE
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 010C:RPM
@@ -86,6 +96,7 @@ supported_commands_by_ecu:
   - 015B:BAT_SOC
   - 019A:EHEV_MODE,EHEV_MODE_SUP,HEV_BATT_A,HEV_BATT_A_SUP,HEV_BATT_V,HEV_BATT_V_SUP,HEV_MODE,HEV_MODE_SUP
   - 7E4.7EC.015B
+  - 7E4.7EC.019A
   "7E6":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 010C:RPM
@@ -98,6 +109,15 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
 unsupported_commands_by_ecu:
+  "6F1":
+  - 6F1.22420C
+  - 6F1.22D031
+  - 6F1.22D240
+  - 6F1.22DA12
+  - 6F1.22DA37
+  - 6F1.22DB32
+  - 6F1.22DCDD
+  - 6F1.22DFE7
   "7D4":
   - 7D4.7DC.2101:TUCSONHYB_STEER_ANGLE
   "7E0":
