--- a/tests/test_cases/2024/commands/7E0.0134.yaml
+++ b/tests/test_cases/2024/commands/7E0.0134.yaml
@@ -1,9 +1,9 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
-    LAMBDA11_CURRENT: 0.95139
-    O2S11_CURRENT: -0.18359
-  response: 7E806413479C77FD1
+    LAMBDA11_CURRENT: 0.9028
+    O2S11_CURRENT: -0.39844
+  response: 7E8064134738F7F9A
 - expected_values:
     LAMBDA11_CURRENT: 0.99997
     O2S11_CURRENT: -0.01953
@@ -13,9 +13,9 @@ test_cases:
     O2S11_CURRENT: 0
   response: 7E806413480DF8000
 - expected_values:
-    LAMBDA11_CURRENT: 1.05515
-    O2S11_CURRENT: 0.09375
-  response: 7E8064134870F8018
+    LAMBDA11_CURRENT: 1.16428
+    O2S11_CURRENT: 0.27344
+  response: '7E806413495078046'
 - expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 1.20312
@@ -26,5 +26,5 @@ test_cases:
   response: 7E8064134FFFF81FE
 - expected_values:
     LAMBDA11_CURRENT: 1.99
-    O2S11_CURRENT: 2.45703
-  response: 7E8064134FFFF8275
+    O2S11_CURRENT: 2.25391
+  response: 7E8064134FFFF8241
