--- a/tests/test_cases/2024/commands/7E0.0131.yaml
+++ b/tests/test_cases/2024/commands/7E0.0131.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     CLR_DIST: 14080
   response: '7E80441313700'
+- expected_values:
+    CLR_DIST: 14336
+  response: '7E80441313800'
