Update command data for Hyundai/Tucson Hybrid

--- a/tests/test_cases/2024/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -39,6 +39,18 @@ test_cases:
 - expected_values:
     TUCSONHYB_TP_FL: 0
     TUCSONHYB_TP_FR: 0
+    TUCSONHYB_TP_RL: 32
+    TUCSONHYB_TP_RR: 31.8
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180000000000200
+    7A82200000002A03401
+    7A82300009F33010000
+    7A824FFFFFFFFFF88A9
+    7A82588A9AAAAAAAAAA
+- expected_values:
+    TUCSONHYB_TP_FL: 0
+    TUCSONHYB_TP_FR: 0
     TUCSONHYB_TP_RL: 32.8
     TUCSONHYB_TP_RR: 0
   response: |-
