Update command data for Hyundai/Tucson Hybrid

--- a/tests/test_cases/2024/commands/7C6.7CE.22B002|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7C6.7CE.22B002|fc=1.yaml
@@ -23,6 +23,13 @@ test_cases:
     7CE222482AAAAAAAAAA
 - expected_values:
     TUCSONHYB_ODO_KM: 0
+    TUCSONHYB_ODO_MI: 9548
+  response: |-
+    7CE100F62B002D00000
+    7CE21002DAD00000000
+    7CE22254CAAAAAAAAAA
+- expected_values:
+    TUCSONHYB_ODO_KM: 0
     TUCSONHYB_ODO_MI: 9292
   response: |-
     7CE100F62B002D00000
