--- a/tests/test_cases/2024/commands/7E0.0131.yaml
+++ b/tests/test_cases/2024/commands/7E0.0131.yaml
@@ -10,5 +10,5 @@ test_cases:
     CLR_DIST: 14080
   response: '7E80441313700'
 - expected_values:
-    CLR_DIST: 14595
-  response: '7E80441313903'
+    CLR_DIST: 15058
+  response: 7E80441313AD2
