Update command data for Hyundai/Tucson Hybrid

--- a/tests/test_cases/2024/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -86,6 +86,18 @@ test_cases:
     7A82588A9AAAAAAAAAA
 - expected_values:
     TUCSONHYB_TP_FL: 32.6
+    TUCSONHYB_TP_FR: 32.2
+    TUCSONHYB_TP_RL: 32.6
+    TUCSONHYB_TP_RR: 31.8
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180A334010000A1
+    7A82232010000A33201
+    7A82300009F30010000
+    7A8243188A988A988A9
+    7A82588A9AAAAAAAAAA
+- expected_values:
+    TUCSONHYB_TP_FL: 32.6
     TUCSONHYB_TP_FR: 0
     TUCSONHYB_TP_RL: 0
     TUCSONHYB_TP_RR: 0
