--- a/tests/test_cases/2024/commands/7E0.0106.yaml
+++ b/tests/test_cases/2024/commands/7E0.0106.yaml
@@ -6,3 +6,8 @@ test_cases:
 - expected_values:
     SHRTFT1: 23.4375
   response: 7E80341069E
+- expected_values:
+    SHRTFT1: 1.5625
+  response: |-
+    7E80441313C4A
+    7E803410682
