Update command data for Hyundai/Tucson Hybrid

--- a/tests/test_cases/2024/commands/7A0.7A8.22C00B|fc=1.yaml
+++ b/tests/test_cases/2024/commands/7A0.7A8.22C00B|fc=1.yaml
@@ -39,6 +39,18 @@ test_cases:
 - expected_values:
     TUCSONHYB_TP_FL: 0
     TUCSONHYB_TP_FR: 0
+    TUCSONHYB_TP_RL: 0
+    TUCSONHYB_TP_RR: 35.2
+  response: |-
+    7A8102462C00BFFFFFF
+    7A82180000000000200
+    7A82200000002000000
+    7A8230002B038010000
+    7A824FFFFFFFFFFFFFF
+    7A82588A9AAAAAAAAAA
+- expected_values:
+    TUCSONHYB_TP_FL: 0
+    TUCSONHYB_TP_FR: 0
     TUCSONHYB_TP_RL: 32
     TUCSONHYB_TP_RR: 31.8
   response: |-
@@ -86,16 +98,16 @@ test_cases:
     7A82588A9AAAAAAAAAA
 - expected_values:
     TUCSONHYB_TP_FL: 0
-    TUCSONHYB_TP_FR: 35.6
-    TUCSONHYB_TP_RL: 36
-    TUCSONHYB_TP_RR: 36
+    TUCSONHYB_TP_FR: 35.2
+    TUCSONHYB_TP_RL: 0
+    TUCSONHYB_TP_RR: 0
   response: |-
     7A8102462C00BFFFFFF
-    7A821800000000002B2
-    7A8223F010000B43D01
-    7A8230000B43E010000
-    7A824FFFFFF88A988A9
-    7A82588A9AAAAAAAAAA
+    7A821800000000002B0
+    7A82239010000000000
+    7A82300020000000002
+    7A824FFFFFF88A9FFFF
+    7A825FFFFAAAAAAAAAA
 - expected_values:
     TUCSONHYB_TP_FL: 31.6
     TUCSONHYB_TP_FR: 32
